--- a/build.gradle
+++ b/build.gradle
@@ -7,4 +7,7 @@ plugins {
     id 'com.android.application' version '7.3.1' apply false
     id 'com.android.library' version '7.3.1' apply false
     id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
+
+//    firebase
+    id 'com.google.gms.google-services' version '4.3.15' apply false
 }
