--- a/app/build.gradle
+++ b/app/build.gradle
@@ -73,6 +73,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-storage-ktx'
 
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
+    implementation 'com.google.firebase:firebase-common-ktx:20.3.1'
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
