--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,7 +68,9 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
 //    firebase
-    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+    implementation 'com.google.firebase:firebase-analytics-ktx'
+//    implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
 
