--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,13 +68,13 @@ dependencies {
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
 //    firebase
-    implementation platform('com.google.firebase:firebase-bom:31.5.0')
+//    implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
     implementation 'com.google.firebase:firebase-auth-ktx'
-//    implementation platform('com.google.firebase:firebase-bom:31.2.3')
+    implementation platform('com.google.firebase:firebase-bom:31.2.3')
     implementation 'com.google.firebase:firebase-firestore-ktx'
     implementation 'com.google.firebase:firebase-storage-ktx'
-
+    implementation 'com.google.firebase:firebase-firestore:22.0.1'
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     implementation 'com.google.firebase:firebase-common-ktx:20.3.1'
 
