Add Menu "Obat" with access to download pdf with link
this features hasn't permission yet to download with link

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -31,6 +31,12 @@
             android:foregroundServiceType="location" />
 
         <activity
+            android:name=".ObatDaftarLayanan"
+            android:exported="false"
+            android:label="ObatDaftarLayanan"
+            android:theme="@style/Theme.Project3activity" />
+
+        <activity
             android:name=".RegJKNActivity"
             android:exported="false"
             android:label="@string/title_activity_reg_jknactivity"
@@ -145,6 +151,7 @@
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
+
     </application>
 
 </manifest>
