--- a/app/build.gradle
+++ b/app/build.gradle
@@ -77,6 +77,10 @@ dependencies {
     implementation 'com.google.firebase:firebase-firestore:22.0.1'
     implementation("io.coil-kt:coil-compose:2.0.0-rc01")
     implementation 'com.google.firebase:firebase-common-ktx:20.3.1'
+    implementation 'com.google.android.gms:play-services-auth:20.5.0'
+
+    implementation "androidx.lifecycle:lifecycle-viewmodel-compose:2.6.0"
+    implementation "androidx.lifecycle:lifecycle-runtime-compose:2.6.0"
 
     testImplementation 'junit:junit:4.13.2'
     androidTestImplementation 'androidx.test.ext:junit:1.1.5'
