--- a/app/build.gradle
+++ b/app/build.gradle
@@ -67,6 +67,12 @@ dependencies {
     implementation("io.coil-kt:coil-compose:2.1.0")
     implementation 'com.google.android.gms:play-services-location:20.0.0'
 
+
+    // Dagger - Hilt
+//    implementation "com.google.dagger:hilt-android:2.44"
+//    kapt "com.google.dagger:hilt-android-compiler:2.44"
+//    kapt 'androidx.hilt:hilt-compiler:1.0.0'
+//    implementation 'androidx.hilt:hilt-navigation-compose:1.0.0'
 //    firebase
 //    implementation platform('com.google.firebase:firebase-bom:31.5.0')
     implementation 'com.google.firebase:firebase-analytics-ktx'
@@ -93,3 +99,5 @@ dependencies {
 
 
 }
+
+apply plugin: 'com.google.gms.google-services'
