--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools">
+    xmlns:tools="http://schemas.android.com/tools" >
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,10 +19,20 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project3activity"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31">
+        tools:targetApi="31" >
+        <activity
+            android:name=".ArticleDetailsActivity"
+            android:exported="false"
+            android:label="@string/title_activity_article_details"
+            android:theme="@style/Theme.Project3activity" />
+        <activity
+            android:name=".ArticelDetailActivity"
+            android:exported="false"
+            android:label="@string/title_activity_articel_detail"
+            android:theme="@style/Theme.Project3activity.NoActionBar" />
         <activity
             android:name=".SSOact"
-            android:exported="true">
+            android:exported="true" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -44,13 +54,11 @@
             android:exported="false"
             android:label="@string/title_activity_syarat_jknactivity"
             android:theme="@style/Theme.Project3activity" />
-
         <activity
             android:name=".ObatDaftarLayanan"
             android:exported="false"
             android:label="@string/title_activity_medicine_jknactivity"
             android:theme="@style/Theme.Project3activity" />
-
         <activity
             android:name=".RegJKNActivity"
             android:exported="false"
@@ -85,7 +93,7 @@
         <activity
             android:name=".SplashAct"
             android:exported="true"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -96,7 +104,7 @@
             android:name=".SignupActivity"
             android:exported="false"
             android:label="@string/title_activity_signup"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -104,7 +112,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar">
+            android:theme="@style/Theme.AppCompat.NoActionBar" >
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -117,7 +125,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -134,7 +142,7 @@
             android:name=".OtherActivity"
             android:exported="false"
             android:label="otheractivity"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -143,7 +151,7 @@
             android:name=".InfoActivity"
             android:exported="false"
             android:label="bottommenu"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -152,7 +160,7 @@
             android:name=".DaftarLayananActivity"
             android:exported="false"
             android:label="daftarlayanan"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -161,12 +169,11 @@
             android:name=".InformasiKlinikActivity"
             android:exported="false"
             android:label="daftarlayanan"
-            android:theme="@style/Theme.Project3activity">
+            android:theme="@style/Theme.Project3activity" >
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
         </activity>
-
     </application>
 
 </manifest>
