--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools" >
+    xmlns:tools="http://schemas.android.com/tools">
 
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
@@ -19,7 +19,12 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.Project3activity"
         android:usesCleartextTraffic="true"
-        tools:targetApi="31" >
+        tools:targetApi="31">
+        <activity
+            android:name=".FormKonsulActivity"
+            android:exported="false"
+            android:label="@string/title_activity_form_konsul"
+            android:theme="@style/Theme.Project3activity" />
         <activity
             android:name=".ArticleDetailsActivity"
             android:exported="false"
@@ -32,8 +37,7 @@
             android:theme="@style/Theme.Project3activity.NoActionBar" />
         <activity
             android:name=".SSOact"
-            android:exported="true" >
-        </activity>
+            android:exported="true"></activity>
         <activity
             android:name=".RecentActivity"
             android:exported="false"
@@ -54,7 +58,6 @@
             android:exported="false"
             android:label="@string/title_activity_skrinning"
             android:theme="@style/Theme.Project3activity" />
-
         <activity
             android:name=".ObatDaftarLayanan"
             android:exported="false"
@@ -94,7 +97,7 @@
         <activity
             android:name=".SplashAct"
             android:exported="true"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -105,7 +108,7 @@
             android:name=".SignupActivity"
             android:exported="false"
             android:label="@string/title_activity_signup"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -113,7 +116,7 @@
         <activity
             android:name=".HomeActivity"
             android:exported="true"
-            android:theme="@style/Theme.AppCompat.NoActionBar" >
+            android:theme="@style/Theme.AppCompat.NoActionBar">
             <intent-filter>
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
@@ -126,7 +129,7 @@
             android:name=".MainActivity"
             android:exported="true"
             android:label="@string/app_name"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
 
             <!-- <intent-filter> -->
             <!-- <action android:name="android.intent.action.MAIN" /> -->
@@ -143,7 +146,7 @@
             android:name=".OtherActivity"
             android:exported="false"
             android:label="otheractivity"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -152,7 +155,7 @@
             android:name=".InfoActivity"
             android:exported="false"
             android:label="bottommenu"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -161,7 +164,7 @@
             android:name=".DaftarLayananActivity"
             android:exported="false"
             android:label="daftarlayanan"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
@@ -170,7 +173,7 @@
             android:name=".InformasiKlinikActivity"
             android:exported="false"
             android:label="daftarlayanan"
-            android:theme="@style/Theme.Project3activity" >
+            android:theme="@style/Theme.Project3activity">
             <meta-data
                 android:name="android.app.lib_name"
                 android:value="" />
