--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,6 +21,11 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".UpcomingProfileActivity"
+            android:exported="false"
+            android:label="@string/title_activity_upcoming_profile"
+            android:theme="@style/Theme.Project3activity" />
+        <activity
             android:name=".DropdownActivity"
             android:exported="false"
             android:label="@string/title_activity_dropdown"
